fix: double vertical scrollbars

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -131,7 +131,6 @@ body {
   /* stylelint-disable-next-line declaration-block-no-duplicate-properties, value-no-vendor-prefix */
   min-height: -webkit-fill-available; /* 3 */
   margin: 0;
-  overflow-x: hidden;
 
   > * {
     flex-shrink: 0; /* 1 */
